src/styles.module.css
.cursor {
  display: none;
}

@media (any-pointer: fine) {
	.cursor {
		position: fixed;
		top: 0;
		left: 0;
		display: block;
		pointer-events: none;
    opacity: 0;
    z-index: 100000;
  }
}

